# testing

./: 1.txt  2.txt  c2.py  c4.py  implant.c  inmemagent.cpp  newdropper.cpp  newimplant.c  nextgenload.cpp  rat.asm
EDRBYPASSWORM/: Cargo.toml  testing.rs
EDRBYPASSWORM/src/: main.rs
aagent/: Cargo.toml  main.rs
aagent/src/: main.rs
advancedasmdropper/: Cargo.toml  dropped.asm
advancedasmdropper/src/: main.rs
banker/: Cargo.toml  main.rs
banker/src/: main.rs
bankerv2/: Cargo.toml  \
bankerv2/src/: main.rs
beaconagent/: Cargo.toml
beaconagent/src/: main.rs
demon/: Cargo.toml
demon/src/: main.rs
p2pworm/: Cargo.toml
p2pworm/src/: main.rs
ransomware/: Cargo.toml
ransomware/src/: main.rs
rmr/: Cargo.toml
rmr/src/: main.rs
rust_obfuscator/: Cargo.toml  image2pdf.py
rust_obfuscator/src/: main.rs
shellcodeloader/: Cargo.toml  build.rs
shellcodeloader/src/: main.rs
wiper/: Cargo.toml
wiperv1/: Cargo.toml
wiperv1/src/: main.rs
