[package]
name = "apt_obfuscator"
version = "2.0.0"
authors = ["APT Dev <apt@dev.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
crossterm = "0.28.1"
goblin = "0.9.0"
log = "0.4.17"
env_logger = "0.11.5"
rand = "0.8.5"
rsa = "0.9.0"
aes = "0.8.0"
sha2 = "0.10.2"
walkdir = "2.3.2"
regex = "1.7.3"
zip = "2.2.0"
fs_extra = "1.3"
num_cpus = "1.16"

