[package]
name = "wiper"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
openssl = { version = "0.10", features = ["vendored"] }
winapi = { version = "0.3", features = ["debugapi"] }
ssh2 = "0.9"  
reqwest = { version = "0.12.8", features = ["blocking"] }
ftp = "3.0.1"                                                      
walkdir = "2.5.0"
windows = "0.58.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
